<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/course_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_puzzle_main_page_color">

        <TextView
            android:id="@+id/puzzle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:alpha="0.8"
            android:text="@string/puzzle_string"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="53sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/puzzle_back_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:alpha="0.75"
            android:background="@drawable/puzzle_back_shape"
            android:contentDescription="back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/puzzle_back_icon"
            android:layout_width="40dp"
            android:layout_height="39.3dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="65dp"
            android:contentDescription="back_icon"
            android:src="@drawable/back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/easy_course"
            android:layout_width="351dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/puzzle"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp">


            <TextView
                android:id="@+id/easy_puzzle_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:alpha="0.5"
                android:text="01"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/easy_puzzle_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/puzzle_easy_title"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/easy_puzzle_descript"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="80dp"
                android:alpha="0.6"
                android:text="@string/easy_puzzle_descript"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/easy_puzzle_arrow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="55dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/course_1_descript"
                app:srcCompat="@drawable/ic_arrow_left" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/normal_puzzle"
            android:layout_width="351dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/easy_course"
            app:layout_constraintStart_toStartOf="@+id/easy_course"
            app:layout_constraintTop_toBottomOf="@+id/easy_course">

            <TextView
                android:id="@+id/normal_puzzle_number"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:alpha="0.5"
                android:text="02"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/normal_puzzle_ntitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/puzzle_normal_title"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/normal_puzzle_descript"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="80dp"
                android:alpha="0.6"
                android:text="@string/normal_puzzle_descript"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/normal_puzzle_arrow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="55dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/course_2_descript"
                app:srcCompat="@drawable/ic_arrow_left" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/hard_puzzle"
            android:layout_width="351dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/normal_puzzle"
            app:layout_constraintStart_toStartOf="@+id/normal_puzzle"
            app:layout_constraintTop_toBottomOf="@+id/normal_puzzle">

            <TextView
                android:id="@+id/hard_puzzle_number"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.5"
                android:text="03"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hard_puzzle_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/puzzle_hard_title"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hard_puzzle_descript"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="80dp"
                android:alpha="0.6"
                android:text="@string/hard_puzzle_descript"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/hard_puzzle_arrow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="55dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/course_4_descript"
                app:srcCompat="@drawable/ic_arrow_left" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>