<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".loginRegister.LoginActivity" >

    <RelativeLayout
        android:id="@+id/page_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background_shape"
        android:alpha="0.80000001192093"
        >

        <ImageView
            android:id="@+id/homegrown_education_logo_removebg_preview_1"
            android:layout_width="247dp"
            android:layout_height="206dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:contentDescription="homegrown_education_logo_removebg_preview_1"
            android:src="@drawable/homegrown_education_logo_removebg_preview_1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="610dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="220dp"
            android:contentDescription="login"
            android:background="@drawable/login">

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="90dp"
                android:text="@string/email_string"
                android:textColor="@color/username_ek2_color"
                android:textSize="24sp" />

            <RelativeLayout
                android:id="@+id/email_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="130dp">

            <EditText
                android:id="@+id/etresetemail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/yourname_gmail_com_string"
                android:inputType="textEmailAddress"
                android:src="@drawable/card"
                android:textColorHint="@color/username_ek1_color" />

            <ImageView
                    android:id="@+id/vector"
                    android:layout_width="16.61dp"
                    android:layout_height="15.2dp"
                    android:layout_marginStart="250dp"
                    android:layout_marginTop="18dp"
                    android:contentDescription="vector"
                    android:src="@drawable/vector_ek1" />

            </RelativeLayout>


            <Button
                android:id="@+id/btnresetpage"
                android:layout_width="314dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="300dp"
                android:background="@drawable/rectangle_2_shape"
                android:text="Reset Password"
                style="@style/ButtonGrey"
                android:textColor="@color/bg_login_page_ek2_color"
                android:textSize="17.92sp" />

            <TextView
                android:id="@+id/tvresettologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="380dp"
                android:text="@string/back_to_login_page"
                android:textColor="@color/haven_t_sign_up_yet__color"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="Forget Password ?"
                android:textColor="@color/title_color"
                android:textSize="36sp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>

